completed models account, avatar, block, like, post, transaction & repository
